migrate to javaslang immutable collections