@@ -1,10 +1,10 @@
 package com.mercateo.jsonschema.property;
 
 import com.mercateo.jsonschema.generictype.GenericType;
+import javaslang.collection.List;
 import org.junit.Before;
 import org.junit.Test;
 
-import java.util.List;
 import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -20,8 +20,7 @@ public class FieldCollectorTest {
 
     @Test
     public void mapAllDeclaredFields() throws Exception {
-        final List<RawProperty> properties = fieldCollector.forType(PropertyHolder.class)
-                .collect(Collectors.toList());
+        final List<RawProperty> properties = fieldCollector.forType(PropertyHolder.class).toList();
 
         assertThat(properties).extracting(RawProperty::name).containsExactlyInAnyOrder("hidden",
                 "visible");
@@ -30,8 +29,7 @@ public class FieldCollectorTest {
     @Test
     public void limitToPublicFieldsIfConfigured() throws Exception {
         fieldCollector = new FieldCollector(FieldCollectorConfig.builder().withIncludePrivateFields(false).build());
-        final List<RawProperty> properties = fieldCollector.forType(PropertyHolder.class)
-                .collect(Collectors.toList());
+        final List<RawProperty> properties = fieldCollector.forType(PropertyHolder.class).toList();
 
         assertThat(properties).extracting(RawProperty::name).containsExactly("visible");
     }
@@ -39,7 +37,7 @@ public class FieldCollectorTest {
     @Test
     public void mapAllDaeclaredFields() throws Exception {
         final RawProperty hidden = fieldCollector.forType(PropertyHolder.class)
-                .filter(p -> p.name().equals("hidden")).findFirst().get();
+                .filter(p -> p.name().equals("hidden")).head();
 
         final PropertyHolder propertyHolder = new PropertyHolder();
         hidden.valueAccessor().apply(propertyHolder);
